chore: spacing correction

--- a/src/screens/Content/About/About.css
+++ b/src/screens/Content/About/About.css
@@ -18,7 +18,7 @@
 
 .text-wrapper {
     width: 100%;
-    padding: 40px 20px 80px 20px;
+    padding: 20px 20px 80px 20px;
     max-width: 700px;
 
     @media (min-width:0px) and (max-width:980px) {
